--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="container">
         <header>
             <img src="https://pbs.twimg.com/profile_images/582143425899671554/HsOYWBs9.jpg" alt="">
-            <div class="bio">JavaScript lover, Open Source enthusiast, front-end Developer @ <a href="https://housing.com">http://Housing.com</a></div>
+            <div class="bio">JavaScript lover, Open Source enthusiast, front-end Developer @ <a href="https://housing.com">Housing.com</a></div>
             <div class="twitter-follow">
                 <a href="https://twitter.com/ritz078" class="twitter-follow-button" data-show-count="false">Follow @ritz078</a>
                 <script>
