--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
     <div class="container">
       <div class="left-section">
-        <div class="dp"></div>
+        <div class="dp" data-background="images/favicon.png"></div>
         <h2><span>Ritesh</span> Kumar</h2>
         <div class="bio">JavaScript Developer @
           <a href="https://housing.com" target="_blank">Housing.com</a>
@@ -63,7 +63,6 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/handlebars/handlebars.js"></script>
-    <script src="/bower_components/scrollreveal/dist/scrollreveal.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
