--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/handlebars/handlebars.js"></script>
+    <script src="/bower_components/handlebars/handlebars.runtime.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
