--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="footer">
           <div class="social" id="social"></div>
-          <div class="copy">Copyright <i class="fa fa-copyright"></i> 2016</div>
+          <div class="copy">Copyright &copy; 2016</div>
         </div>
       </div>
 
